<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.activity.MainActivity">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btNow" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btNow"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/now"
            android:textAllCaps="false"
            android:elevation="10dp"
            android:background="@drawable/rounded_bt_now"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btChooseDate" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btChooseDate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/choose_date"
            android:textAllCaps="false"
            android:elevation="10dp"
            android:background="@drawable/gradient_list_bt_choose_date"
            app:layout_constraintTop_toBottomOf="@id/btNow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/llDate" />


        <LinearLayout
            android:id="@+id/llDate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/btChooseDate"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <TextView
                android:id="@+id/tvOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <ImageView
                android:id="@+id/imgEthereum"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ethereum_logo"
                />

            <TextView
                android:id="@+id/tvRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <ImageView
                android:id="@+id/imgLive"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/live"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
