<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/rounded_bottom_sheet">

            <LinearLayout
                android:id="@+id/llButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/llTextView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:gravity="start"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    android:text="@string/cancel" />

                <TextView
                    android:id="@+id/tvHead"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/head" />

                <TextView
                    android:id="@+id/btOk"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:elevation="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/blue"
                    android:text="@string/ok" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/llButton"
                >

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/text_grey"
                    android:text="@string/choose_date"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/choose_time"
                    android:textColor="@color/text_grey"
                    android:textSize="13sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llNow"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintTop_toBottomOf="@+id/llTextView"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/calendar_green"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:text="@string/now2"
                    android:textColor="@color/black"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/tvNowValue"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="валью"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llYesterday"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintTop_toBottomOf="@+id/llNow"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/calendar_orange"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:text="@string/yesterday"
                    android:textColor="@color/black"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/tvYesterdayValue"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="валью"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPrevWeek"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintTop_toBottomOf="@+id/llYesterday"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/calendar_time"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:text="@string/previous_week"
                    android:textColor="@color/black"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/tvPrevWeekValue"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="валью"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCurrentDateTime"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintTop_toBottomOf="@+id/llPrevWeek"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/calendar_red"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:text="@string/current"
                    android:textColor="@color/black"
                    android:textSize="13sp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>



